# plox

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
notes/resolverVsEnvExtension/: README.md
notes/variantVsInheritance/: README.md  VariantVsInheritance.md  crtpVisitor.cpp  fixedRetTypeVisitor.cpp  variant.cpp
tree-walk/: CMakeLists.txt  README.md  main.cpp
tree-walk/src/: CMakeLists.txt  ast.h  ast_printer.cpp  ast_printer.h  class.cpp  class.h  environment.cpp  environment.h  errs.cpp  errs.h  exceptions.cpp  exceptions.h  func.cpp  func.h  func_native.cpp  func_native.h  interpreter.cpp  interpreter.h  interpreter_visitor.cpp  interpreter_visitor.h  main.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  stmt.h  stmt_printer.cpp  stmt_printer.h  value.cpp  value.h  value_printer.cpp  value_printer.h
tree-walk/systemtest/: conftest.py  test_block.py  test_class.py  test_for.py  test_fun.py  test_if.py  test_while.py
tree-walk/tests/: CMakeLists.txt  environment.t.cpp  interpreter.t.cpp  parser.t.cpp  scanner.t.cpp
tree-walk/tools/: gen_ast_h.py
